# auiwarden

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: MainWindow.cpp  MainWindow.h  PageMain.cpp  PageMain.h  PagePie.cpp  PagePie.h  Tracker.cpp  Tracker.h
src/model/: Database.cpp  Database.h  Group.cpp  Group.h  Idle.h  State.cpp  State.h  TimeSpan.h
src/platform/linux/: NativeTrackers.cpp  TrackerKDE6.cpp  TrackerKDE6.h  TrackerWaylandExtIdleNotifyV1.cpp  TrackerWaylandExtIdleNotifyV1.h
src/platform/win32/: NativeTrackers.cpp  WindowsTracker.cpp  WindowsTracker.h
src/settings/: Groups.cpp  Groups.h  SettingsWindow.cpp  SettingsWindow.h
src/utils/: date.cpp  date.h
src/view/: GridView.cpp  GridView.h  TimeSpanView.cpp  TimeSpanView.h
tests/: DatabaseTest.cpp  DateUtilsTest.cpp  TrackerTest.cpp
